; ModuleID = '/home/carl/AnghaBench/goaccess/src/extr_geoip2.c_init_geoip.c'
source_filename = "/home/carl/AnghaBench/goaccess/src/extr_geoip2.c_init_geoip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i8* }
%struct.TYPE_8__ = type { %struct.TYPE_7__ }
%struct.TYPE_7__ = type { i32 }

@conf = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8
@mmdb = common dso_local global %struct.TYPE_8__* null, align 8
@MMDB_MODE_MMAP = common dso_local global i32 0, align 4
@MMDB_SUCCESS = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [36 x i8] c"Unable to open GeoIP2 database: %s\0A\00", align 1
@.str.1 = private unnamed_addr constant [14 x i8] c"GeoLite2-City\00", align 1
@geoip_city_type = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @init_geoip() #0 {
  %1 = alloca i8*, align 8
  %2 = alloca i32, align 4
  %3 = load i8*, i8** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @conf, i32 0, i32 0), align 8
  store i8* %3, i8** %1, align 8
  store i32 0, i32* %2, align 4
  %4 = load i8*, i8** %1, align 8
  %5 = icmp eq i8* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %0
  br label %28

7:                                                ; preds = %0
  %8 = call %struct.TYPE_8__* @xcalloc(i32 1, i32 4)
  store %struct.TYPE_8__* %8, %struct.TYPE_8__** @mmdb, align 8
  %9 = load i8*, i8** %1, align 8
  %10 = load i32, i32* @MMDB_MODE_MMAP, align 4
  %11 = load %struct.TYPE_8__*, %struct.TYPE_8__** @mmdb, align 8
  %12 = call i32 @MMDB_open(i8* %9, i32 %10, %struct.TYPE_8__* %11)
  store i32 %12, i32* %2, align 4
  %13 = load i32, i32* @MMDB_SUCCESS, align 4
  %14 = icmp ne i32 %12, %13
  br i1 %14, label %15, label %20

15:                                               ; preds = %7
  %16 = load %struct.TYPE_8__*, %struct.TYPE_8__** @mmdb, align 8
  %17 = call i32 @free(%struct.TYPE_8__* %16)
  %18 = load i8*, i8** %1, align 8
  %19 = call i32 @FATAL(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0), i8* %18)
  br label %20

20:                                               ; preds = %15, %7
  %21 = load %struct.TYPE_8__*, %struct.TYPE_8__** @mmdb, align 8
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %21, i32 0, i32 0
  %23 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @strcmp(i32 %24, i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.1, i64 0, i64 0))
  %26 = icmp eq i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  store i32 1, i32* @geoip_city_type, align 4
  br label %28

28:                                               ; preds = %6, %27, %20
  ret void
}

declare dso_local %struct.TYPE_8__* @xcalloc(i32, i32) #1

declare dso_local i32 @MMDB_open(i8*, i32, %struct.TYPE_8__*) #1

declare dso_local i32 @free(%struct.TYPE_8__*) #1

declare dso_local i32 @FATAL(i8*, i8*) #1

declare dso_local i64 @strcmp(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
